add fields to applics

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -241,6 +241,10 @@ en:
         conf_section: "Field of science (choose one)"
         conf_coauthors: "Co-authors (If applicable: Last and first namea, Affiliation, Position, E-mail address)"
         participation_type: "Full time paticipation or Distance involved"
+        need_compensation: "Do you need compensation of transport expences?"
+        inn: "INN"
+        snils: "Social Identification Number"
+        registration: "Permanent registration address"
       kofst_applic:
         avatar: "Photo"
         korean_name: "Korean Name"
@@ -292,6 +296,7 @@ en:
   work: "Work"
   additional_info: "Additional information"
   applicaion_info: "Application to the Conference"
+  compensation_info: "Compensation info"
   yes1: "Yes"
   no1: "No"
   id_antok: "AKSTS Russia ID"
@@ -320,12 +325,13 @@ en:
   step2_title: "Personal application filling out"
   step2_info: "Step 2 out of 3: Personal application submitting"
   step2_warning: "Please, check the application before submitting. After the submitting it will become unedittablte."
+  step2_application_sent: "Your personal application is submitted. Go to step 3." 
   step3_apply_btn: "Submit for conference (step 3)"
   step3_view_btn: "Browse conference application (step 3)"
   step3_info: "Step 3 out of 3: Conference application submitting"
   step3_title: "Conference application filling out"
   home_link: "Home page"
-  application_sent: "Your application has been sent"
+  step3_application_sent: "Your application has been sent. Thank you!"
   application_updated_successfuly: "Your application has been updated"
   please_sign_in: "Please sign in"
   your_application_details: "Your application details"
