--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -288,6 +288,10 @@ ru:
           conf_section: "Направление"
           conf_coauthors: "Соавторы (указываются при наличии: ФИО, место работы, должность, почта)"
           participation_type: "Тип участия"
+          need_compensation: "Нуждаетесь ли вы в компенсации транспортных расходов?"
+          inn: "ИНН"
+          snils: "СНИЛС"
+          registration: "Адрес постоянной регистрации"
         kofst_applic:
           avatar: "Ваше фото"
           korean_name: "Фамилия и имя на корейском"
@@ -344,6 +348,7 @@ ru:
     work: "Работа"
     additional_info: "Дополнительная информация"
     applicaion_info: "Заявка на конференцию"
+    compensation_info: "Информация о компенсации расходов"
     yes1: "Да"
     no1: "Нет"
     id_antok: "ID АНТОК"
@@ -364,20 +369,22 @@ ru:
     home_welcome: "Добро пожаловать на научную конференцию 2014 года в Екатеринбург!"
     home_lead: "В конференции могут принять участие все желающие, в том числе члены научно-технических обществ корейцев России, а также стран СНГ, Европейского союза и Кореи. Программа конференции предусматривает возможность участия в ней специалистов из разных областей науки и техники. На конференции они смогут обсудить результаты последних научных и технологических разработок. Конференция состоится в Екатеринбурге в июле 2014 г."
     sign_up_registration: "Регистрация в личном кабинете АНТОК"
-    sign_up_info: "Шаг 1 из 3: Создание учетной записи"
+    sign_up_info: "Шаг 1: Создание учетной записи"
     step1_view_btn: "Смотреть мой аккаунт (шаг 1)"
-    step2_apply_btn: "Заполнить анкету (шаг 2)"
-    step2_view_btn: "Смотреть мою анкету (шаг 2)"
+    step2_apply_btn: "Заполнить заявку на конференцию (шаг 2)"
+    step2_view_btn: "Смотреть заявку на конференцию (шаг 2)"
     step2_my_account_btn: "Мой аккаунт"
-    step2_title: "Заполнение анкеты"
-    step2_info: "Шаг 2 из 3: Заполнение персональной анкеты"
+    step2_title: "Заполнение заявки на конференцию"
+    step2_info: "Шаг 2: Заполнение заявки на конференцию"
     step2_warning: "Перед тем как сохранить, проверьте правильность внесенных данных. После сохранения, внести изменения будет нельзя."
-    step3_apply_btn: "Заполнить заявку на конференцию (шаг 3)"
-    step3_view_btn: "Смотреть заявку на конференцию (шаг 3)"
-    step3_info: "Шаг 3 из 3: Заполнение заявки на конференцию"
-    step3_title: "Заполнение заявки на конференцию"
+    step2_compensation_info: "Необходимо заполнить все нижеуказанные поля: ИНН, СНИЛС, адрес. Для не членов АНТОК дополнительно нужно будет заполнить персональную анкету."
+    step2_application_sent: "Ваша заявка на конференцию заполнена"
+    step3_apply_btn: "Заполнить персональную анкету (шаг 3)"
+    step3_view_btn: "Смотреть персональную анкету (шаг 3)"
+    step3_info: "Шаг 3: Заполнение анкеты"
+    step3_title: "Заполнение персональной анкеты"
     home_link: "На главную"
-    application_sent: "Ваша анкета отправлена"
+    step3_application_sent: "Ваша заявка на конфренцию отправлена. Спасибо!"
     application_updated_successfuly: "Ваша анкета успешна сохранена"
     please_sign_in: "Пожалуйста войдите в систему"
     your_application_details: "Информация по вашей анкете"
