site ready to create applications

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -291,7 +291,7 @@ ru:
           need_compensation: "Нуждаетесь ли вы в компенсации транспортных расходов?"
           inn: "ИНН"
           snils: "СНИЛС"
-          registration: "Адрес постоянной регистрации"
+          registration: "Адрес постоянной регистрации с индексом"
         kofst_applic:
           avatar: "Ваше фото"
           korean_name: "Фамилия и имя на корейском"
@@ -378,16 +378,17 @@ ru:
     step2_info: "Шаг 2: Заполнение заявки на конференцию"
     step2_warning: "Перед тем как сохранить, проверьте правильность внесенных данных. После сохранения, внести изменения будет нельзя."
     step2_compensation_info: "Необходимо заполнить все нижеуказанные поля: ИНН, СНИЛС, адрес. Для не членов АНТОК дополнительно нужно будет заполнить персональную анкету."
-    step2_application_sent: "Ваша заявка на конференцию заполнена"
+    step2_application_sent: "Ваша заявка на конфренцию отправлена. Спасибо!"
     step3_apply_btn: "Заполнить персональную анкету (шаг 3)"
     step3_view_btn: "Смотреть персональную анкету (шаг 3)"
-    step3_info: "Шаг 3: Заполнение анкеты"
+    step3_info: "Шаг 3: Заполнение персональной анкеты"
     step3_title: "Заполнение персональной анкеты"
+    step3_application_sent: "Ваша персональная анкета заполнена. Спасибо!"
     home_link: "На главную"
-    step3_application_sent: "Ваша заявка на конфренцию отправлена. Спасибо!"
     application_updated_successfuly: "Ваша анкета успешна сохранена"
     please_sign_in: "Пожалуйста войдите в систему"
-    your_application_details: "Информация по вашей анкете"
+    your_application_details: "Информация по вашей заявке на конференцию"
+    your_kofst_application_details: "Информация по вашей персональной анкете"
     edit_your_application: "Редактирование анкеты"
     male: "Мужской"
     female: "Женский"
@@ -438,3 +439,5 @@ ru:
     area_of_interest: "Ваши интересы (можно выбрать несколько)"
     welcome_myaksts: "Добро пожаловать в личный кабинет АНТОК!"
     or: "или"
+    education_warning: "Обязательно одна или более записей"
+    professional_warning: "Обязательно одна или более записей"
