--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -317,24 +317,25 @@ en:
   home_welcome: "Welcome to 2014 Science Conference in Yekaterinberg!"
   home_lead: "Everyone can join the 2014 Science Conference including the members of korean scientific society of Russia, Associations of Korean Scientists and Engineers of the Commonwealth of Independent States, European Union and Korea. Conference Program unify the specialists from many fields of science and technology. During the Conference the results of scientific and technological researches will be presented and discussied. The conference will take place in Yekaterinburg city in July 2014."
   sign_up_registration: "Register"
-  sign_up_info: "Step 1 out of 3: Create new account"
+  sign_up_info: "Step 1: Create new account"
   step1_view_btn: "Browse my account (step 1)"
-  step2_apply_btn: "Submit personal application (step 2)"
-  step2_view_btn: "Browse personal application (step 2)"
+  step2_apply_btn: "Submit conference application (step 2)"
+  step2_view_btn: "Browse conference application (step 2)"
   step2_my_account_btn: "My account"
-  step2_title: "Personal application filling out"
-  step2_info: "Step 2 out of 3: Personal application submitting"
+  step2_title: "Conference application filling out"
+  step2_info: "Step 2: Conference application submitting"
   step2_warning: "Please, check the application before submitting. After the submitting it will become unedittablte."
-  step2_application_sent: "Your personal application is submitted. Go to step 3." 
-  step3_apply_btn: "Submit for conference (step 3)"
-  step3_view_btn: "Browse conference application (step 3)"
-  step3_info: "Step 3 out of 3: Conference application submitting"
-  step3_title: "Conference application filling out"
+  step2_application_sent: "Your application has been sent. Thank you!" 
+  step3_apply_btn: "Submit personal application (step 3)"
+  step3_view_btn: "Browse personal application (step 3)"
+  step3_info: "Step 3: Personal application submitting"
+  step3_title: "Personal application filling out"
+  step3_application_sent: "Your personal application has been sent. Thank you!"
   home_link: "Home page"
-  step3_application_sent: "Your application has been sent. Thank you!"
   application_updated_successfuly: "Your application has been updated"
   please_sign_in: "Please sign in"
-  your_application_details: "Your application details"
+  your_application_details: "Your conference application details"
+  your_kofst_application_details: "Your personal application details"
   edit_your_application: "Edit your application"
   male: "Male"
   female: "Female"
@@ -373,3 +374,5 @@ en:
   area_of_interest: "Area of Interest (multiple choise)"
   welcome_myaksts: "Welcome to personal AKSTS member page!"
   or: "or"
+  education_warning: "Not less then 1 record"
+  professional_warning: "Not less then 1 record"
