--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -289,7 +289,7 @@ en:
   save: "Save"
   cancel: "Cancel"
   you_already_have_application: "You already have application"
-  application_registered: "The application to the AKSTS 2014 Conference has been submitted"
+  application_registered: "The application to the AKSTS 2015 Conference has been submitted"
   anketa: "Conference Participant's questionary"
   personal_info: "Personal Information"
   education: "Education"
@@ -370,7 +370,7 @@ en:
   back: "Back"
   application_id_number: "Your application number"
   questions_application: "If you have question or wish to correnct the application email to AKSTSRussia@gmail.com"
-  abstracts: "Abstracts for registered participants should be submitted by e-mail AKSTSRussia@gmail.com until the 15th of May 2014. Template for the Abstracts enclosed."
+  abstracts: "Abstracts for registered participants should be submitted by e-mail AKSTSRussia@gmail.com"
   area_of_interest: "Area of Interest (multiple choise)"
   welcome_myaksts: "Welcome to personal AKSTS member page!"
   or: "or"
