--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -341,8 +341,8 @@ ru:
     save: "Сохранить"
     cancel: "Отменить"
     you_already_have_application: "У вас уже есть заявка на конференцию"
-    application_registered: "Зарегистрирована заявка на конференцию АНТОК-2014"
-    anketa: "Анкета участника конференции АНТОК-2014"
+    application_registered: "Зарегистрирована заявка на конференцию АНТОК-2015"
+    anketa: "Анкета участника конференции АНТОК-2015"
     personal_info: "Персональная информация"
     education: "Образование"
     work: "Работа"
@@ -423,7 +423,7 @@ ru:
     back: "Назад"
     application_id_number: "Идентификационный номер участника"
     questions_application: "По всем вопросам, включая внесение изменений в заявку, обращайтесь по AKSTSRussia@gmail.com"
-    abstracts: "Тезисы для зарегистрированных участников необходимо выслать на e-mail AKSTSRussia@gmail.com до 15 мая 2014."  
+    abstracts: "Тезисы для зарегистрированных участников необходимо выслать на e-mail AKSTSRussia@gmail.com"  
     email_test: "Тестовая отправка на email"
     email_real: "Разослать на email всем участникам конференции"
     current_job: "Текущая работа"
