add antok id search

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -262,7 +262,7 @@ ru:
           remember_me: "Запомнить меня"
           current_password: "Текущий пароль"
           is_antok_member: "Являюсь членом научно-технического общества корейцев"
-          antok_id: "ID (заполняется для членов общества, свой ID можно узнать у Елены Хе - elenakhe@ngs.ru)"
+          antok_id: "АНТОК ID (заполняется для членов общества)"
           cant_be_blank: "не может быть пустым"
           is_foreign: "Являюсь иностранным участником"
         applic:
