--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -290,7 +290,7 @@ ru:
           participation_type: "Тип участия"
           need_compensation: "Нуждаетесь ли вы в компенсации транспортных расходов?"
           inn: "ИНН"
-          snils: "СНИЛС"
+          snils: "СНИЛС (только цифры без дефисов и пробелов)"
           registration: "Адрес постоянной регистрации с индексом"
         kofst_applic:
           avatar: "Ваше фото"
