--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -127,6 +127,7 @@ ru:
         blank: не может быть пустым
         should_be_1920_2000: должна быть от 1920 до 2000 года
         science_specific_field_not_ok: должна соответствовать Научной сфере
+        antok_id_not_found: antok_id не найден (указывайте в формате 011-0123)
         confirmation: не совпадает с подтверждением
         empty: не может быть пустым
         equal_to: может иметь лишь значение, равное %{count}
@@ -271,11 +272,13 @@ ru:
           birth_date: "Дата рождения (формат ГГГГ-ММ-ДД)"
           sex: "Пол"
           post_address: "Почтовый адрес"
-          phones: "Телефоны с кодом города (мобильный / рабочий / домашний / факс)"
+          phones: "Мобильный телефон (формат 10 знаков, только числа, обязательное поле)"
+          phone_work: "Рабочий телефон (10 знаков, только числа)"
+          phone_home: "Домашний телефон (10 знаков, только числа)"
           edu_institute: "Институт"
           edu_institute_address: "Адрес института"
           edu_specialization: "Специализация / направление обучения"
-          uch_stepen: "Ученая степень, ученое звание, диплом специалиста, бакалавра, магистра и год получения / студентам указывать курс"
+          uch_stepen: "Ученая степень"
           work_company: "Название организации"
           work_start_year: "Год начала работы в организации"
           work_department: "Подразделение / отдел / департамент / кафедра"
@@ -441,3 +444,9 @@ ru:
     or: "или"
     education_warning: "Обязательно одна или более записей"
     professional_warning: "Обязательно одна или более записей"
+    st_doctor: "Доктор наук"
+    st_kandidat: "Кандидат наук"
+    st_magister: "Магистр"
+    st_special: "Специалист"
+    st_bachelor: "Бакалавр"
+    st_student: "Студент"
