--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -127,7 +127,7 @@ ru:
         blank: не может быть пустым
         should_be_1920_2000: должна быть от 1920 до 2000 года
         science_specific_field_not_ok: должна соответствовать Научной сфере
-        antok_id_not_found: antok_id не найден (указывайте в формате 011-0123)
+        antok_id_not_found: antok_id не найден (указывайте в формате 011-0123, при необходимости воспользуйте ссылкой ниже для поиска своего АНТОК ID)
         confirmation: не совпадает с подтверждением
         empty: не может быть пустым
         equal_to: может иметь лишь значение, равное %{count}
@@ -262,7 +262,7 @@ ru:
           password_confirmation: "Подтверждение пароля"
           remember_me: "Запомнить меня"
           current_password: "Текущий пароль"
-          is_antok_member: "Являюсь членом научно-технического общества корейцев"
+          is_antok_member: "Являюсь членом АНТОК"
           antok_id: "АНТОК ID (заполняется для членов общества)"
           cant_be_blank: "не может быть пустым"
           is_foreign: "Являюсь иностранным участником"
@@ -417,8 +417,8 @@ ru:
     no_confirmation: "Не получили инструкцию по подтверждению аккаунта?"
     no_unlock: "Не получили инструкцию по восстановлению аккаунта?"
     edit_account: "Редактировать аккаунт"
-    leave_it_blank: "оставьте пустым если не хотите изменять"
-    we_need_your_current_password: "нужен текущий пароль, чтобы сохранить изменения"
+    leave_it_blank: 'Поля "Пароль" и "Подтверждение пароля" заполняются, только если вы хотите изменить текущий пароль'
+    we_need_your_current_password: 'Текущий пароль заполняется обязательно, чтобы сохранить изменения'
     update: "Сохранить"
     unhappy: "Несчастны"
     cancel_my_account: "Удалить мой аккаунт"
