--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -423,7 +423,7 @@ ru:
     update: "Сохранить"
     unhappy: "Несчастны"
     cancel_my_account: "Удалить мой аккаунт"
-    are_you_sure: "При удалении акаунта будет удалена ваша заявка на конференцию и анкета. Вы уверены"
+    are_you_sure: "При удалении аккаунта будет удалена ваша заявка на конференцию и анкета. Вы уверены"
     back: "Назад"
     application_id_number: "Идентификационный номер участника"
     questions_application: "По всем вопросам, включая внесение изменений в заявку, обращайтесь по AKSTSRussia@gmail.com"
