--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -361,7 +361,7 @@ ru:
     birth_date: "Дата рождения (формат ДД.ММ.ГГГГ)"
     work_specialization: "Специализация"
     conf_coauthors: "Соавторы"
-    home_conf_antok: "Личный кабинет члена АНТОК"
+    home_conf_antok: "Конференция АНТОК-2017 Сахалин"
     home_link_home: "Главная"
     home_link_conf: "О конференции"
     home_link_prog: "Программа"
