--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -292,7 +292,7 @@ en:
   save: "Save"
   cancel: "Cancel"
   you_already_have_application: "You already have application"
-  application_registered: "The application to the AKSTS 2015 Conference has been submitted"
+  application_registered: "The application to conference has been submitted"
   anketa: "Conference Participant's questionary"
   personal_info: "Personal Information"
   education: "Education"
@@ -309,7 +309,7 @@ en:
   birth_date: "Birth date (YYYY-MM-DD)"
   work_specialization: "Specialization"
   conf_coauthors: "Co-Authors"
-  home_conf_antok: "AKSTS-2017 Conference Sakhalin"
+  home_conf_antok: "XVII МЕЖДУНАРОДНАЯ КОНФЕРЕНЦИЯ ПО НАУКЕ И ТЕХНОЛОГИЯМ (rus)"
   home_link_home: "Home"
   home_link_conf: "About"
   home_link_prog: "Program"
@@ -349,6 +349,8 @@ en:
   novosibirsk: "Novosibirsk"
   krasnoyarsk: "Krasnoyarsk"
   far_east: "Far East"
+  kaliningrad: "Kaliningrad"
+  uz_sakhalinsk: "Yuzhno-Sakhalinsk"
   physics_maths: "Physics, Maths"
   it_nanothechnologies: "Information- (IT) and Nano- thechnologies"
   power_electrical_engineering: "Power and Electrical engineering, Machinery, Mechanics"
@@ -387,4 +389,6 @@ en:
   st_bachelor: "Bachelor"
   st_student: "Student"
   find_antokid: "Find AKSTS ID"
-  your_login: "Your login for personal AKSTS member page http://my.aksts.ru - "
+  your_login: "Your login for personal member page http://conf2017.aksts.ru - "
+  home_conf_welcome: "ДОБРО ПОЖАЛОВАТЬ НА XVII МЕЖДУНАРОДНУЮ КОНФЕРЕНЦИЮ ПО НАУКЕ И ТЕХНОЛОГИЯМ (rus)"
+  home_conf_description: 'Для участия в конференции необходимо подать заявку через сайт. Если Вы уже зарегистировались на эту конференцию и хотите просмотреть информацию по своей заявке, нажмите кнопку "Вход". (rus)'
