--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -258,8 +258,8 @@ ru:
       attributes:
         user:
           name: "ФИО" 
-          password: "Пароль"
-          password_confirmation: "Подтверждение пароля"
+          password: "Пароль для личного кабинета на этом сайте"
+          password_confirmation: "Подтверждение пароля для личного кабинета на этом сайте"
           remember_me: "Запомнить меня"
           current_password: "Текущий пароль"
           is_antok_member: "Являюсь членом АНТОК"
@@ -272,19 +272,21 @@ ru:
           birth_date: "Дата рождения (формат ГГГГ-ММ-ДД)"
           sex: "Пол"
           post_address: "Почтовый адрес"
-          phones: "Мобильный телефон (формат 10 знаков, только числа, обязательное поле)"
-          phone_work: "Рабочий телефон (10 знаков, только числа)"
-          phone_home: "Домашний телефон (10 знаков, только числа)"
+          phones: "Мобильный телефон (10 знаков, пример ввода 9161234567 / 4951234567)"
+          phone_work: "Рабочий телефон (10 знаков, пример ввода 9161234567 / 4951234567)"
+          phone_home: "Домашний телефон (10 знаков, пример ввода 9161234567 / 4951234567)"
           edu_institute: "Институт"
           edu_institute_address: "Адрес института"
           edu_specialization: "Специализация / направление обучения"
+          uch_zvanie: "Ученое звание"
           uch_stepen: "Ученая степень"
-          work_company: "Название организации"
+          work_company: "Полное название организации"
+          work_city: "Город"
           work_start_year: "Год начала работы в организации"
           work_department: "Подразделение / отдел / департамент / кафедра"
           work_position: "Должность"
           work_specialization: "Специализация (пример: химия, энергетика, авиастроение, новые материалы, биотехнологии, прикладная математика, ИТ)"
-          antok_city: "Ближайшее подразделение АНТОК"
+          antok_city: "Ближайшее региональное отделение АНТОК"
           public_organizations: "Участие в других общественных организациях"
           science_interests: "Область научных/профессиональных интересов"
           conf_topic: "Тема доклада"
@@ -344,7 +346,7 @@ ru:
     save: "Сохранить"
     cancel: "Отменить"
     you_already_have_application: "У вас уже есть заявка на конференцию"
-    application_registered: "Зарегистрирована заявка на конференцию АНТОК-2015"
+    application_registered: "Зарегистрирована заявка на XVII МЕЖДУНАРОДНАЯ КОНФЕРЕНЦИЯ ПО НАУКЕ И ТЕХНОЛОГИЯМ"
     anketa: "Анкета участника конференции АНТОК-2015"
     personal_info: "Персональная информация"
     education: "Образование"
@@ -361,7 +363,7 @@ ru:
     birth_date: "Дата рождения (формат ДД.ММ.ГГГГ)"
     work_specialization: "Специализация"
     conf_coauthors: "Соавторы"
-    home_conf_antok: "Конференция АНТОК-2017 Сахалин"
+    home_conf_antok: "XVII МЕЖДУНАРОДНАЯ КОНФЕРЕНЦИЯ ПО НАУКЕ И ТЕХНОЛОГИЯМ"
     home_link_home: "Главная"
     home_link_conf: "О конференции"
     home_link_prog: "Программа"
@@ -378,7 +380,7 @@ ru:
     step2_view_btn: "Смотреть заявку на конференцию (шаг 2)"
     step2_my_account_btn: "Мой аккаунт"
     step2_title: "Заполнение заявки на конференцию"
-    step2_info: "Шаг 2: Заполнение заявки на конференцию"
+    step2_info: "Шаг 2: Заполнение заявки на конференцию. Поля со * обязательны к заполнению"
     step2_warning: "Перед тем как сохранить, проверьте правильность внесенных данных. После сохранения, внести изменения будет нельзя."
     step2_compensation_info: "Необходимо заполнить все нижеуказанные поля: ИНН, СНИЛС, адрес. Для не членов АНТОК дополнительно нужно будет заполнить персональную анкету."
     step2_application_sent: "Ваша заявка на конфренцию отправлена. Спасибо!"
@@ -402,6 +404,8 @@ ru:
     novosibirsk: "Новосибирск"
     krasnoyarsk: "Красноярск"
     far_east: "Дальний Восток"
+    kaliningrad: "Калининград"
+    uz_sakhalinsk: "Южно-Сахалинск"
     physics_maths: "Физика, математика"
     it_nanothechnologies: "Информационные (IT) и нанотехнологии"
     power_electrical_engineering: "Энергетика, электротехника, машиностроение, механика"
@@ -427,7 +431,7 @@ ru:
     back: "Назад"
     application_id_number: "Идентификационный номер участника"
     questions_application: "По всем вопросам, включая внесение изменений в заявку, обращайтесь по AKSTSRussia@gmail.com"
-    abstracts: "Тезисы для зарегистрированных участников необходимо выслать на e-mail AKSTSRussia@gmail.com"  
+    abstracts: "Доклад на русском и тезисы доклада на английском языках необходимо выслать с 13 марта до 20 апреля 2017 года на e-mail AKSTSRussia@gmail.com"  
     email_test: "Тестовая отправка на email"
     email_real: "Разослать на email всем участникам конференции"
     current_job: "Текущая работа"
@@ -452,4 +456,6 @@ ru:
     st_bachelor: "Бакалавр"
     st_student: "Студент"
     find_antokid: "Найти АНТОК ID"
-    your_login: "Ваш логин для входа в личный кабинет АНТОК http://my.aksts.ru - "
+    your_login: "Ваш логин для входа в личный кабинет на сайт конференции http://conf2017.aksts.ru - "
+    home_conf_welcome: "ДОБРО ПОЖАЛОВАТЬ НА XVII МЕЖДУНАРОДНУЮ КОНФЕРЕНЦИЮ ПО НАУКЕ И ТЕХНОЛОГИЯМ"
+    home_conf_description: 'Для участия в конференции необходимо подать заявку через сайт. Если Вы уже зарегистировались на эту конференцию и хотите просмотреть информацию по своей заявке, нажмите кнопку "Вход".'
