--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -9,12 +9,12 @@ ru:
     failure:
       already_authenticated: "You are already signed in."
       inactive: "Your account is not activated yet."
-      invalid: "Invalid email or password."
+      invalid: "Не верный логин или пароль."
       locked: "Your account is locked."
       last_attempt: "You have one more attempt before your account will be locked."
-      not_found_in_database: "Invalid email or password."
+      not_found_in_database: "Не верный логин или пароль."
       timeout: "Your session expired. Please sign in again to continue."
-      unauthenticated: "You need to sign in or sign up before continuing."
+      unauthenticated: "Нужно произвести вход для продолжения."
       unconfirmed: "You have to confirm your account before continuing."
     mailer:
       confirmation_instructions:
