--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -281,6 +281,7 @@ ru:
           uch_zvanie: "Ученое звание"
           uch_stepen: "Ученая степень"
           work_company: "Полное название организации"
+          work_country: "Страна"
           work_city: "Город"
           work_start_year: "Год начала работы в организации"
           work_department: "Подразделение / отдел / департамент / кафедра"
@@ -346,7 +347,7 @@ ru:
     save: "Сохранить"
     cancel: "Отменить"
     you_already_have_application: "У вас уже есть заявка на конференцию"
-    application_registered: "Зарегистрирована заявка на XVII МЕЖДУНАРОДНАЯ КОНФЕРЕНЦИЯ ПО НАУКЕ И ТЕХНОЛОГИЯМ"
+    application_registered: "Зарегистрирована заявка на XVII МЕЖДУНАРОДНУЮ КОНФЕРЕНЦИЮ ПО НАУКЕ И ТЕХНОЛОГИЯМ"
     anketa: "Анкета участника конференции АНТОК-2015"
     personal_info: "Персональная информация"
     education: "Образование"
@@ -429,9 +430,9 @@ ru:
     cancel_my_account: "Удалить мой аккаунт"
     are_you_sure: "При удалении аккаунта будет удалена ваша заявка на конференцию и анкета. Вы уверены"
     back: "Назад"
-    application_id_number: "Идентификационный номер участника"
+    application_id_number: "Идентификационный номер участника:"
     questions_application: "По всем вопросам, включая внесение изменений в заявку, обращайтесь по AKSTSRussia@gmail.com"
-    abstracts: "Доклад на русском и тезисы доклада на английском языках необходимо выслать с 13 марта до 20 апреля 2017 года на e-mail AKSTSRussia@gmail.com"  
+    abstracts: "Доклад на русском и тезисы доклада на английском языках необходимо выслать с 13 марта по 20 апреля 2017 года на e-mail AKSTSRussia@gmail.com"  
     email_test: "Тестовая отправка на email"
     email_real: "Разослать на email всем участникам конференции"
     current_job: "Текущая работа"
@@ -459,3 +460,4 @@ ru:
     your_login: "Ваш логин для входа в личный кабинет на сайт конференции http://conf2017.aksts.ru - "
     home_conf_welcome: "ДОБРО ПОЖАЛОВАТЬ НА XVII МЕЖДУНАРОДНУЮ КОНФЕРЕНЦИЮ ПО НАУКЕ И ТЕХНОЛОГИЯМ"
     home_conf_description: 'Для участия в конференции необходимо подать заявку через сайт. Если Вы уже зарегистировались на эту конференцию и хотите просмотреть информацию по своей заявке, нажмите кнопку "Вход".'
+    russia: "Россия"
