mobile usability optimization and acad_position added

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -280,6 +280,7 @@ ru:
           edu_specialization: "Специализация / направление обучения"
           uch_zvanie: "Ученое звание"
           uch_stepen: "Ученая степень"
+          acad_position: "Академическая должность"
           work_company: "Полное название организации"
           work_country: "Страна"
           work_city: "Город"
@@ -294,7 +295,7 @@ ru:
           conf_section: "Направление"
           conf_coauthors: "Соавторы (указываются при наличии: ФИО, место работы, должность, почта)"
           participation_type: "Тип участия"
-          need_compensation: "Нуждаетесь ли вы в компенсации транспортных расходов?"
+          need_compensation: "Нужна компенсация транспортных расходов?"
           inn: "ИНН"
           snils: "СНИЛС (только цифры без дефисов и пробелов)"
           registration: "Адрес постоянной регистрации с индексом"
@@ -391,7 +392,7 @@ ru:
     step3_title: "Заполнение персональной анкеты"
     step3_application_sent: "Ваша персональная анкета заполнена. Спасибо!"
     home_link: "На главную"
-    application_updated_successfuly: "Ваша анкета успешна сохранена"
+    application_updated_successfuly: "Ваша заявка успешна сохранена"
     please_sign_in: "Пожалуйста войдите в систему"
     your_application_details: "Информация по вашей заявке на конференцию"
     your_kofst_application_details: "Информация по вашей персональной анкете"
@@ -458,6 +459,5 @@ ru:
     st_student: "Студент"
     find_antokid: "Найти АНТОК ID"
     your_login: "Ваш логин для входа в личный кабинет на сайт конференции http://conf2017.aksts.ru - "
-    home_conf_welcome: "ДОБРО ПОЖАЛОВАТЬ НА XVII МЕЖДУНАРОДНУЮ КОНФЕРЕНЦИЮ ПО НАУКЕ И ТЕХНОЛОГИЯМ"
-    home_conf_description: 'Для участия в конференции необходимо подать заявку через сайт. Если Вы уже зарегистировались на эту конференцию и хотите просмотреть информацию по своей заявке, нажмите кнопку "Вход".'
+    home_conf_description: 'Для участия в конференции необходимо подать заявку через сайт. Если Вы уже зарегистрировались на эту конференцию и хотите просмотреть информацию по своей заявке, нажмите кнопку "Вход".'
     russia: "Россия"
