update for 2018 conf

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -349,7 +349,7 @@ ru:
     cancel: "Отменить"
     you_already_have_application: "У вас уже есть заявка на конференцию"
     application_registered: "Зарегистрирована заявка на XVII МЕЖДУНАРОДНУЮ КОНФЕРЕНЦИЮ ПО НАУКЕ И ТЕХНОЛОГИЯМ"
-    anketa: "Анкета участника конференции АНТОК-2015"
+    anketa: "Анкета участника конференции"
     personal_info: "Персональная информация"
     education: "Образование"
     work: "Работа"
@@ -365,7 +365,8 @@ ru:
     birth_date: "Дата рождения (формат ДД.ММ.ГГГГ)"
     work_specialization: "Специализация"
     conf_coauthors: "Соавторы"
-    home_conf_antok: "XVII МЕЖДУНАРОДНАЯ КОНФЕРЕНЦИЯ ПО НАУКЕ И ТЕХНОЛОГИЯМ"
+    home_conf_antok: "XVIII МЕЖДУНАРОДНАЯ КОНФЕРЕНЦИЯ ПО НАУКЕ И ТЕХНОЛОГИЯМ"
+    home_conf_moto: "SCIENCE. FRIENDSHIP. COLLABORATION."
     home_link_home: "Главная"
     home_link_conf: "О конференции"
     home_link_prog: "Программа"
@@ -373,7 +374,7 @@ ru:
     home_link_sp: "Спонсоры"
     home_link_log_out: "Выход"
     home_link_log_in: "Вход"
-    home_welcome: "Добро пожаловать на научную конференцию 2014 года в Екатеринбург!"
+    home_welcome: "Добро пожаловать на научную конференцию!"
     home_lead: "В конференции могут принять участие все желающие, в том числе члены научно-технических обществ корейцев России, а также стран СНГ, Европейского союза и Кореи. Программа конференции предусматривает возможность участия в ней специалистов из разных областей науки и техники. На конференции они смогут обсудить результаты последних научных и технологических разработок. Конференция состоится в Екатеринбурге в июле 2014 г."
     sign_up_registration: "Регистрация в личном кабинете АНТОК"
     sign_up_info: "Шаг 1: Создание учетной записи"
@@ -460,4 +461,5 @@ ru:
     find_antokid: "Найти АНТОК ID"
     your_login: "Ваш логин для входа в личный кабинет на сайт конференции http://conf2017.aksts.ru - "
     home_conf_description: 'Для участия в конференции необходимо подать заявку через сайт. Если Вы уже зарегистрировались на эту конференцию и хотите просмотреть информацию по своей заявке, нажмите кнопку "Вход".'
+    home_conf_description_temp: 'Регистрация скоро откроется!'
     russia: "Россия"
