antok members list

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -463,3 +463,4 @@ ru:
     home_conf_description: 'Для участия в конференции необходимо подать заявку через сайт. Если Вы уже зарегистрировались на эту конференцию и хотите просмотреть информацию по своей заявке, нажмите кнопку "Вход".'
     home_conf_description_temp: 'Регистрация скоро откроется!'
     russia: "Россия"
+    saved_successfuly: "Успешно сохранено"
