--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -233,6 +233,7 @@ en:
         edu_specialization: "Specialization / Major"
         uch_stepen: "Scientific degree, Year of obtaining the degree / Students should input the year of study"
         work_company: "Work experience: Affiliation"
+        work_company_short: "Affiliation short name for badge"
         work_start_year: "I work for the company since (year)"
         work_department: "Department"
         work_position: "Position"
@@ -351,6 +352,7 @@ en:
   far_east: "Far East"
   kaliningrad: "Kaliningrad"
   uz_sakhalinsk: "Yuzhno-Sakhalinsk"
+  vladivostok: "Vladivostok"
   physics_maths: "Physics, Maths"
   it_nanothechnologies: "Information- (IT) and Nano- thechnologies"
   power_electrical_engineering: "Power and Electrical engineering, Machinery, Mechanics"
