--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -277,16 +277,16 @@ ru:
           birth_date: "Дата рождения (формат ГГГГ-ММ-ДД)"
           sex: "Пол"
           post_address: "Почтовый адрес"
-          phones: "Мобильный телефон (10 знаков, пример ввода 9161234567 / 4951234567)"
-          phone_work: "Рабочий телефон (10 знаков, пример ввода 9161234567 / 4951234567)"
-          phone_home: "Домашний телефон (10 знаков, пример ввода 9161234567 / 4951234567)"
+          phones: "Мобильный телефон"
+          phone_work: "Рабочий телефон"
+          phone_home: "Домашний телефон"
           edu_institute: "Институт"
           edu_institute_address: "Адрес института"
           edu_specialization: "Специализация / направление обучения"
           uch_zvanie: "Ученое звание"
           uch_stepen: "Ученая степень"
-          acad_position: "Академическая должность"
           work_company: "Полное название организации"
+          work_company_short: "Сокращенное название организации для бейджа"
           work_country: "Страна"
           work_city: "Город"
           work_start_year: "Год начала работы в организации"
@@ -389,7 +389,7 @@ ru:
     step2_my_account_btn: "Мой аккаунт"
     step2_title: "Заполнение заявки на конференцию"
     step2_info: "Шаг 2: Заполнение заявки на конференцию. Поля со * обязательны к заполнению"
-    step2_warning: "Перед тем как сохранить, проверьте правильность внесенных данных. После сохранения, внести изменения будет нельзя."
+    step2_warning: "Перед тем как сохранить, проверьте правильность внесенных данных."
     step2_compensation_info: "Необходимо заполнить все нижеуказанные поля: ИНН, СНИЛС, адрес. Для не членов АНТОК дополнительно нужно будет заполнить персональную анкету."
     step2_application_sent: "Ваша заявка на конфренцию отправлена. Спасибо!"
     step3_apply_btn: "Заполнить персональную анкету (шаг 3)"
@@ -414,6 +414,7 @@ ru:
     far_east: "Дальний Восток"
     kaliningrad: "Калининград"
     uz_sakhalinsk: "Южно-Сахалинск"
+    vladivostok: "Владивосток"
     physics_maths: "Физика, математика"
     it_nanothechnologies: "Информационные (IT) и нанотехнологии"
     power_electrical_engineering: "Энергетика, электротехника, машиностроение, механика"
@@ -439,7 +440,7 @@ ru:
     back: "Назад"
     application_id_number: "Идентификационный номер участника:"
     questions_application: "По всем вопросам, включая внесение изменений в заявку, обращайтесь по AKSTSRussia@gmail.com"
-    abstracts: "Доклад на русском и тезисы доклада на английском языках необходимо выслать с 13 марта по 20 апреля 2017 года на e-mail AKSTSRussia@gmail.com"  
+    abstracts: "Для участия в конференции необходимо до 20 июня 2018 года прислать доклад на русском языке, объемом от 2 до 4 страниц, а также тезисы доклада на английском языке, объемом не более 1 страницы, краткую биографию автора и скан акта экспертизы в Оргкомитет по электронной почте AKSTSRussia@gmail.com."
     email_test: "Тестовая отправка на email"
     email_real: "Разослать на email всем участникам конференции"
     current_job: "Текущая работа"
