--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -373,6 +373,7 @@ ru:
     home_conf_antok: "XVIII МЕЖДУНАРОДНАЯ КОНФЕРЕНЦИЯ ПО НАУКЕ И ТЕХНОЛОГИЯМ"
     home_conf_moto: "SCIENCE. FRIENDSHIP. COLLABORATION."
     home_link_home: "Главная"
+    home_link_about: "Об АНТОК"
     home_link_conf: "О конференции"
     home_link_prog: "Программа"
     home_link_hotel: "Как добраться"
